# exciting

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .mod_wannier.f90.un~  CHANGELOG.md  CMakeLists.txt  COPYING  INSTALL  LICENSE  Makefile  README  README.md  TODO  backup.f90  cpy  getevalqp.f90  gitlab-ci.yml  hartfock.f90  index.html  m_ematqk_hack.f90  make.inc  make.inc.AIX.debug  mod_wannier.f90  mod_wannier.f90.201710201656  mod_wannier.f90.2702171706  mod_wannier_interpolate.f90  mod_wannier_interpolate.f90.201707131232  setup  setup.pl  tags  txt  wannier_interpolate_density_otf.f90
src/: .bandstr.f90.swh  .bandstr.f90.swi  .bandstr.f90.swj  .bandstr.f90.swk  .bandstr.f90.swl  .bandstr.f90.swm  .bandstr.f90.swn  .bandstr.f90.swo  .bandstr.f90.swp  .bandstr.f90.un~  .cvsignore  .dos.f90.un~  .emat_wannier.f90.swo  .emat_wannier.f90.swp  .findequivkpt.f90.un~  .findkpt.f90.swp  .findsym.f90.un~  .findsymcrys.f90.un~  .genapwfr.f90.swo  .genapwfr.f90.swp  .gendmat.f90.swo  .genexpiqr.f90.swo  .genexpiqr.f90.swp  .genfftmap.f90.swo  .gengpvec.f90.swo  .gengpvec.f90.swp  .genidxlo.f90.swp  .genlofr.f90.swo  .genlofr.f90.swp  .genlofr.f90.un~  .genppts.f90.un~  .getevecfv.f90.swo  .getevecfv.f90.swp  .getevecfv.f90.un~  .init1.f90.swo  .init1.f90.un~  .m_ematqk.f90.swm  .m_ematqk.f90.swn  .m_ematqk.f90.swo  .m_ematqk.f90.un~  (+575 more)
src/ARPACK/: ARmake.inc  Makefile
src/BLAS/: .cvsignore  Makefile
src/BLAS-3.1.1/: Makefile
src/FoX/: .gitignore  FoX-config  arch.make  config.status
src/JDQZ/: Makefile  manual.tex
src/LAPACK/: .cvsignore  Makefile  dlamch.f
src/LAPACK-3.1.1/: Makefile
src/Lbfgsb.3.0/: Makefile
src/autormt/: autormt.f90  autormt_test.f90  autormt_test_driver.f90
src/char_utils/: char_utils_test_drivers.f90  to_char_conversion.f90  to_char_conversion_test.f90
src/constants/: constants.f90  physical_constants.f90  precision.f90  unit_conversion.f90
src/dfpt/: dfpt.f90  dfpt_density_potential.f90  dfpt_eigensystem.f90  dfpt_inout.f90  dfpt_variables.f90  phonons.f90  phonons_density_potential.f90  phonons_eigensystem.f90  phonons_force.f90  phonons_inout.f90  phonons_parallelization.f90  phonons_symmetry.f90  phonons_symmetry.md  phonons_variables.f90
src/eos/: .modmain.f90.swo  Makefile  README  amoeba.f90  amotry.f90  constants.f90  eos.f90  eos.in  fitdata.f90  fopt.f90  modeos.f90  modmain.f90  output.f90  readdata.f90  readinput.f90
src/errors_warnings/: asserts.F90  errors_warnings.f90  trace.F90
src/fftlib/: .cvsignore  Makefile  cfftnd.f90
src/file_io/: block_data_file.f90  block_data_file_test.f90  file_io_test_drivers.f90  file_utils.f90
src/input/: cmd_line_args.f90
src/lapack_wrappers/: lapack_wrappers_test_drivers.f90  mkl_service.f90  xlapack.f90
src/leblaiklib/: Makefile  leblaik.f90
src/libXC/: .gitignore  AUTHORS  ChangeLog  DONE  Makefile  Makefile.am  Makefile.in  NEWS  PACKAGING  README  TODO  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  config.status.lineno  configure  configure.ac  libtool
src/libapw/: hmlrad.f90  mod_addons.f90  mod_libapw.f90
src/libbzint/: COPYRIGHT  Makefile  README  bloechlcor.f90  calcdosve.f90  calcidosve.f90  cartezian.f90  convcorew.f90  convw.f90  convw1t.f90  convw_1k.f90  convw_1kbc.f90  coorskp.f90  divisi.f90  dos1t.f90  dostet.f90  edifwt.f90  edifwtaylor.f90  edifwtx.f90  edifwty.f90  edifwtz.f90  factorize.f90  fermi.f90  fermitet.f90  gbass.f90  genericfunf.f90  genericprism.f90  generictetra.f90  idkp.f90  idos.f90  intdos1t.f90  intern.f90  intw.f90  intweight1t.f90  intwsurf.f90  jget.f90  jset.f90  kgen.f90  kgen_internals.f90  kgenq.f90  (+37 more)
src/main/: main.f90
src/mainxml/: .main.f90.un~  main.f90
src/math/: distributions.f90  gaunt.f90  grid_utils.f90  grid_utils_test.f90  integration.f90  integration_test.f90  linear_algebra_3d.f90  linear_algebra_3d_test.f90  math_test_drivers.f90  math_utils.f90  math_utils_tests.f90  matrix_exp.f90  matrix_exp_test.f90  multi_index_conversion.f90  multi_index_conversion_test.f90  normalize.f90  normalize_test.f90  seed_generation.f90  seed_generation_test.f90  sh_product.f90  sh_product_test.f90  sorting.f90  sorting_test.f90  wigner3j_symbol.f90
src/matrix_elements/: matrix_elements.f90  matrix_elements.md  matrix_elements_lapw_lo.f90  matrix_elements_test.f90  matrix_elements_test_drivers.f90
src/my_helpers/: .diagsymmat.f90.un~  .myfindkpt.f90.un~  .readkpts.f90.un~  diaghermat.f90  diagsymmat.f90  readkpts.f90
src/potential/: potentials.f90  weinert.f90
src/read/: getevalsv.f90  getevecfv.f90
src/simplified_input/: APW_basis_size.f90  autormt.f90  predefined_rgkmax.f90  simplified_input_test_driver.f90
src/sirius/: sirius_api.F90  sirius_init.F90
src/spacegroup/: .modmain.f90.swo  .r3frac.f90.swp  .r3minv.f90.un~  .r3ws.f90.un~  Makefile  applyop.f90  findprim.f90  gencrystal.f90  gengroup.f90  geomplot.f90  initatomcounter.f90  input.xml  main.f90  modmain.f90  modspacegroup.f90  r3cross.f90  r3frac.f90  r3minv.f90  r3mm.f90  readinput.f90  seitzeq.f90  seitzgen.f90  seitzmul.f90  sginputmodule.f90  sgsymb.f90  spacegroup.f90  spacegroup.in  spacegroup.xml  template  writegeom.f90  writegeomxml.f90  writevsim.f90  writexsf.f90
src/species/: .gitignore  Makefile  c_pbe.f90  fderiv.f90  findxslorb.f90  modspecies.F90  modxcifc.f90  polynom.f90  rdirac.f90  rdiracdme.f90  rdiracint.f90  species.f90  species.input  species.input.APW  species.input.APW+lo  species.input.APW+lo-Kay  species.input.APW+lo-Legacy  species.input.LAPW  species.input.LAPW+LO  species.input.SLAPW-3  species.input.SLAPW-4  template  writeblock.f90  writexmlspecies.F90  x_pbe.f90  xc_pbe.f90  xc_pwca.f90  xc_vbh.f90
src/src/: .bandstr.f90.swn  .bandstr.f90.swo  .bandstr.f90.swp  .diaggenmat.f90.swp  .diaggenmat.swp  .emat_wannier.f90.swo  .emat_wannier.f90.swp  .genexpiqr.f90.swp  .getevecfv.f90.swp  .mod_APW_LO.F90.swp  .mod_Gvector.F90.swp  .mod_constants.F90.swp  .mod_eigensystem.F90.swp  .outfilenamestring.F90.swp  .wannier_bessel_int.f90.swp  addrhocr.f90  bandstr.f90  charge.f90  checkinput.F90  findigp0.f90  (+90 more)
(+7387 files in other folders)
