# CMakeLists.txt for exciting

#add_library(excitingLib "")

#set_target_properties(excitingLib
#        PROPERTIES
#        VERSION 8.0.0
#        SOVERSION 8.0.0
#        LIBRARY_OUTPUT_NAME exciting
#        ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_Fortran_LIB_DIRECTORY}
#        LIBRARY_OUTPUT_DIRECTORY ${CMAKE_Fortran_LIB_DIRECTORY}
#        )

# TODO Add ALL directories here
#target_include_directories(excitingLib PUBLIC src_gw)

# TODO Add all source files here
# target_sources(excitingLib PRIVATE)

# TODO Link libraries to excitingLib

# TODO Link excitingLib to exciting executable

# Install library
# Destination relative to ${CMAKE_INSTALL_PREFIX}, defined in the top-level
# CMakeLists.txt
#install(TARGETS excitingLib
#        ARCHIVE DESTINATION lib
#        LIBRARY DESTINATION lib)

# Install modules
# Destination relative to ${CMAKE_INSTALL_PREFIX}, defined in the top-level
## CMakeLists.txt
#install(DIRECTORY ${CMAKE_Fortran_MODULE_DIRECTORY}
#        DESTINATION include)
