[metadata]
name = excitingjupyter
version = 0.0.1

[options]
packages = excitingjupyter
install_requires =
    requests
    #importlib; python_version >= "3.7" # MK: Failed on my machine
    excitingtools == 1.0.0
    ase >= 3.20.0
    notebook >= 6.0.0
    jupyterlab-widgets == 1.1.0
    ipywidgets == 7.7.0
    widgetsnbextension == 3.6.0
    nglview == 3.0.3