[metadata]
name = excitingjupyter
version = 0.0.1

[options]
packages = excitingjupyter
install_requires =
    requests
    excitingtools >= 1.0.0
    ase >= 3.20.0
    notebook == 6.4.12 
    jupyterlab-widgets == 1.1.0
    ipywidgets == 7.7.0
    widgetsnbextension == 3.6.0
    nglview == 3.0.3
    nbformat >= 5.0.0
